<resources>
    <string name="app_name">Cryptimeleon Rewards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="rewards">Rewards</string>
    <string name="shopping">Shopping</string>
    <string name="settings">Settings</string>
    <string name="benchmark">Benchmark</string>
    <string name="user_public_key">User Public Key</string>
    <string name="user_secret_key">User Secret Key</string>
    <string name="provider_public_key">Provider Public Key</string>
    <string name="public_parameters">Public Parameters</string>
    <string name="scan">Scan</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="total">Total:</string>
    <string name="price">Price:</string>
    <string name="basket">Basket</string>
    <string name="price_single">Price Single</string>
    <string name="price_total">Price Total</string>
    <string name="button_discard_label">Discard</string>
    <string name="label_promotion_title">Main Promotion</string>
    <string name="label_promotion_description">Earn 1 point for every cent spent.</string>
    <string name="content_description_redeem_image">Redeem Image</string>
    <string name="loading">Loading</string>
</resources>