<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/benchmark_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_speed_24"
        android:title="@string/benchmark" />
    <item
        android:id="@+id/scanFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_qr_code_scanner_24"
        android:title="@string/scan" />
    <item
        android:id="@+id/basketFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_shopping_cart_24"
        android:title="@string/basket" />
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/settings" />

</menu>