<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="scanViewModel"
            type="org.cryptimeleon.incentive.app.scan.ScanResultViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonAddToBasket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> scanViewModel.onAddToBasket()}"
            android:text="@string/add_to_basket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_picker" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{scanViewModel.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/amount_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barcode_text"
            app:maxValue="@{1000}"
            app:minValue="@{1}"
            app:value="@{1}" />

        <TextView
            android:id="@+id/price_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{scanViewModel.priceTotal}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_total_label" />

        <TextView
            android:id="@+id/price_total_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/total"
            app:layout_constraintEnd_toEndOf="@+id/price_total"
            app:layout_constraintStart_toStartOf="@+id/price_total"
            app:layout_constraintTop_toBottomOf="@+id/price_single" />

        <TextView
            android:id="@+id/price_single"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{scanViewModel.priceSingle}"
            app:layout_constraintEnd_toEndOf="@+id/price_total_label"
            app:layout_constraintStart_toStartOf="@+id/price_total_label"
            app:layout_constraintTop_toBottomOf="@+id/price_single_label" />

        <TextView
            android:id="@+id/price_single_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="@+id/price_single"
            app:layout_constraintStart_toStartOf="@+id/price_single"
            app:layout_constraintTop_toBottomOf="@+id/barcode_text" />

        <TextView
            android:id="@+id/barcode_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{scanViewModel.barcode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>